syntax = "proto3";

package jamel;
option go_package = "jamel/;jamel";

enum TaskType {
  DOCKER =         0;
  DOCKER_ARCHIVE = 1;
  SBOM =           2;
}

message TaskRequest {
  string filename    = 1;
  bytes chunk        = 2;
  int64 size         = 3;
  TaskType task_type = 4;
}

message TaskResponse {
  string task_id     = 1;
  string name        = 2;
  string report      = 3;
  string json        = 4;
  string sbom        = 5;
  TaskType task_type = 6;
  string error       = 7;
}
